--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
         <img src="afbeeldingen/locationicon3.png.png" alt="koppelpoort" id="koppelpoort-button" class="poi">
         <div class="hidden" id="koppelpoort">
+            <img src="afbeeldingen/9104213_close_cross_remove_delete_icon.png" alt="kruisje" id="kruis1" class="kruis">
             <img src="afbeeldingen/koppelpoort-amersfoort-wolken-hires-sjoerd-mouissie_3189193439.jpeg"
-                alt="koppelpoort foto">
+                alt="koppelpoort foto" class="plaatje">
             <p>
                 De Koppelpoort is een unieke combinatie van een land- en een waterpoort, de enige in Nederland. De naam
                 is
@@ -39,6 +40,7 @@
         </div>
         <img src="afbeeldingen/locationicon3.png.png" alt="de lievevrouwetoren" id="lievev-button" class="poi">
         <div class="hidden" id="lievevrouwetoren">
+            <img src="afbeeldingen/9104213_close_cross_remove_delete_icon.png" alt="kruisje" id="kruis2" class="kruis">
             <img src="afbeeldingen/lvtoren.jpeg" alt="Delievevrouwetoren">
             <p>
                 De Onze Lieve Vrouwetoren, een kerktoren in Amersfoort, is een laatgotisch bouwwerk van 98,33 meter
@@ -53,6 +55,7 @@
         </div>
         <img src="afbeeldingen/locationicon3.png.png" alt="de sint-joriskerk" id="joris-button" class="poi">
         <div class="hidden" id="sintjoriskerk">
+            <img src="afbeeldingen/9104213_close_cross_remove_delete_icon.png" alt="kruisje" id="kruis3" class="kruis">
             <img src="afbeeldingen/sint-joriskerk.jpeg" alt="De Sint-Joriskerk">
             <p>
                 De Sint-Joriskerk, gelegen in Amersfoort, heeft een rijke geschiedenis die teruggaat tot 1248, toen een
@@ -73,6 +76,7 @@
         <img src="afbeeldingen/locationicon3.png.png" alt="de kamperbinnenpoort" id="Kamperbinnenpoort-button"
             class="poi">
         <div class="hidden" id="kamperbinnenpoort">
+            <img src="afbeeldingen/9104213_close_cross_remove_delete_icon.png" alt="kruisje" id="kruis4" class="kruis">
             <img src="afbeeldingen/kamperbinnenpoort.jpeg" alt="kamperbinnenpoort">
             <p>
                 De Kamperbinnenpoort is een historische stadspoort gelegen in Amersfoort. Gebouwd in de 15e eeuw, diende
@@ -91,6 +95,7 @@
         <img src="afbeeldingen/locationicon3.png.png" alt="Het groot Tinnenburg huis" id="Tinnenburg-button"
             class="poi">
         <div class="hidden" id="groottinnenburg">
+            <img src="afbeeldingen/9104213_close_cross_remove_delete_icon.png" alt="kruisje" id="kruis5" class="kruis">
             <img src="afbeeldingen/GrootTinnenburg.jpeg" alt="GrootTinnenburg plaatje">
             <p>
                 Het Groot Tinnenburg huis, gelegen in Amersfoort, is een historisch pand dat een rijke geschiedenis
@@ -109,8 +114,23 @@
 
             </p>
         </div>
-        <audio id="geluid" src="hit-sound-effect-12445.mp3"></audio>
+        <audio id="geluid" src="tada-fanfare-a-6313.mp3"></audio>
     </main>
+    <footer>
+        <h2>bronnen</h2>
+        <ul>
+            <li>
+                <a
+                    href="https://www.google.com/url?sa=i&url=https%3A%2F%2Famersfoort.nieuws.nl%2Fcontact%2F57493%2Fstadskaart-amersfoort-1649-digitaal-ingekleurd%2F&psig=AOvVaw0NP5Pfu8gkj-3QTJO1PG3_&ust=1710330681366000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCNjOsLfU7oQDFQAAAAAdAAAAABAi">kaart
+                    van Amersfoort</a>
+            </li>
+            <li>
+               <p>
+                tekst: <a href="https://chat.openai.com/">Chat-gpt</a>
+               </p> 
+            </li>
+        </ul>
+    </footer>
     <script src="script.js"></script>
 </body>
 
